--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,13 +24,16 @@ body{
 .no-border{
     border: none !important;
 }
-textarea:focus,input:focus {
+textarea:focus,.gradient-background:focus {
     border: 1px solid #b0b00b !important;
     box-shadow: 0px 0px 10px 2px #b0b00b;
-    background: rgb(255, 0, 0);
-    background: linear-gradient(90deg, rgba(255, 0, 0, 0.5) 0%, rgba(255, 166, 0, 0.46852244315695024) 50%, rgba(255, 247, 0, 0.49933476808692223) 100%);
+    background: rgb(2,0,36);
+    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(80,80,80,0.15479695296087181) 0%, rgba(117,117,117,1) 100%);
 }
 .form-border{
-    /*border: 1px solid white !important;*/
-    /*box-shadow:0px 0px 10px 2px  #b0b00b;*/
+    border: 1px solid white !important;
+    box-shadow:0px 0px 10px 2px  #b0b00b;
+}
+.border-radius{
+    border-radius: 5px;
 }
